--- a/views/admin/book/book_form.ejs
+++ b/views/admin/book/book_form.ejs
@@ -38,7 +38,7 @@
                       <div>
                           <% for (let genre of genres) { %>
                               <div style="display: inline; padding-right:10px">
-                                  <input class="checkbox-input" type="checkbox" name='genre' id="<%= genre._id %>" value="<%= genre._id %>" checked="<%= genre.checked %>">
+                                  <input class="checkbox-input" type="checkbox" name='genre' id="<%= genre._id %>" value="<%= genre._id %>">
                                   <label for="<%= genre._id %>"><%= genre.name %></label>
                               </div>
                           <% } %>
