--- a/views/user/activities.ejs
+++ b/views/user/activities.ejs
@@ -1,8 +1,9 @@
-<%- include('../partials/header') %> 
+<<%- include('../partials/header') %> 
+<!--NAVIGATION BAR FOR USER-->
 
-    
-<!--NAVIGATION BAR FOR ADMIN-->
-<%- include('../partials/adminNav') %> 
+<%- include('../partials/userNav') %> 
+<!--BOOK DETAILS-->
+
 
 <header id="main-header" class="py-2 bg-primary text-white">
   <div class="container">
@@ -19,19 +20,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 mr-auto">
-          <a href="/admin" class="btn btn-light btn-block">
+          <a href="/user/1" class="btn btn-light btn-block">
           <i class="fa fa-arrow-left"></i> Back To Dashboard
         </a>
-      </div>
-      <div class="col-md-6">
-        <form action="/admin/users/activities/<%=activities[0].user_id.id%>" method="POST">
-          <div class="input-group">
-            <input name="category" type="text" class="form-control" placeholder="Search activities by category...">
-            <span class="input-group-btn">
-              <button class="btn btn-primary">Search</button>
-            </span>
-          </div>
-        </form>
       </div>
     </div>
   </div>
