--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card">
-          <img src="/images/<%=user.image||"profile.png" %>" class="card-img-top p-1" alt="...">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwbGozsS9QP10p16rZiCrQD0koXVkI4c7LwUHab9dkmFRcN0VqCkB37f2y0EnySItwykg&usqp=CAU" class="card-img-top p-1" alt="...">
           <div class="card-body">
             <p>Name : <%=user.firstName%> <%=user.lastName%></p>
             <p>Email : <%=user.email%></p>
