--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -55,7 +55,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-              <img src="/images/<%=currentUser.image || "profile.png"%>" class="card-img-top rounded-circle">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwbGozsS9QP10p16rZiCrQD0koXVkI4c7LwUHab9dkmFRcN0VqCkB37f2y0EnySItwykg&usqp=CAU"%>" class="card-img-top rounded-circle">
               <a href="" class="text-muted ml-5" data-toggle="modal" data-target="#changePhotoModal"><i class="fa fa-camera"></i> Change Photo</a>
             </div>
             <div class="col-md-6">
