--- a/views/books.ejs
+++ b/views/books.ejs
@@ -18,17 +18,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item active  px-2">
-            <a class="nav-link" href="/books/all/all/1">All Books</a></a>
+            <a class="nav-link" href="/books/all/all/1"> Books</a></a>
           </li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item active  px-2">
-            <a class="nav-link" href="/authors/all/all/1">All Authors</a></a>
+            <a class="nav-link" href="/authors/all/all/1"> Authors</a></a>
           </li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item active  px-2">
-            <a class="nav-link" href="/genres/all/all/1">All Genres</a></a>
+            <a class="nav-link" href="/genres/all/all/1"> Genres</a></a>
           </li>
         </ul>
            <% if(currentUser) { %>
@@ -63,7 +63,7 @@
             </li>
           </ul>
           <% } else { %>
-          <a href="/signUp" class="btn btn-primary btn-sm ml-auto">Sign up</a>
+            <a href="/auth/user-signup" class="btn btn-primary btn-sm ml-auto">Sign up</a>
           <% } %>
       </div>
   </div>
