--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -64,7 +64,7 @@
             </li>
           </ul>
           <% } else { %>
-          <a href="/signUp" class="btn btn-primary btn-sm ml-auto">Sign up</a>
+          <a href="/auth/user-signup" class="btn btn-primary btn-sm ml-auto">Sign up</a>
           <% } %>
       </div>
   </div>
@@ -95,7 +95,7 @@
           <% if (current == 1) { %>
             <li class="page-item disabled"><a class="page-link">First</a></li>
           <% } else { %>
-            <li class="page-item"><a href="/books/<%=filter%>/<%=value%>/1" class="page-link">First</a></li>
+            <li class="page-item"><a href="/genres/<%=filter%>/<%=value%>/1" class="page-link">First</a></li>
           <% } %>
           
           <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
@@ -106,7 +106,7 @@
                       <% if (i == current) { %>
                           <li class="page-item active"><a class="page-link"><%= i %></a></li>
                       <% } else { %>
-                          <li class="page-item"><a class="page-link" href="/books/<%=filter%>/<%=value%>/<%= i %>"><%= i %></a></li>
+                          <li class="page-item"><a class="page-link" href="/genres/<%=filter%>/<%=value%>/<%= i %>"><%= i %></a></li>
                       <% } %>
                       <% if (i == Number(current) + 4 && i < pages) { %>
                           <li class="page-item disabled"><a class="page-link">...</a></li>
@@ -115,7 +115,7 @@
                   <% if (current == pages) { %>
                       <li class="page-item disabled"><a class="page-link">Last</a></li>
                   <% } else { %>
-                      <li class="page-item"><a href="/books/<%=filter%>/<%=value%>/<%= pages %>" class="page-link">Last</a></li>
+                      <li class="page-item"><a href="/genres/<%=filter%>/<%=value%>/<%= pages %>" class="page-link">Last</a></li>
                   <% } %>
         </ul>
       </nav>
