--- a/views/books.ejs
+++ b/views/books.ejs
@@ -63,6 +63,7 @@
             </li>
           </ul>
           <% } else { %>
+            <a href="/login" class="btn btn-primary btn-sm ml-auto">Login</a>
             <a href="/auth/user-signup" class="btn btn-primary btn-sm ml-auto">Sign up</a>
           <% } %>
       </div>
