--- a/views/admin/book/book_update.ejs
+++ b/views/admin/book/book_update.ejs
@@ -15,7 +15,7 @@
               <div class="card-header text-center">
                 <h4>Add Book</h4>
               </div>
-                  <form class="p-3" action="/admin/books/add" method="POST" enctype="multipart/form-data">                      
+                  <form class="p-3" action="/admin/book/update/<%=book._id%>" method="POST" enctype="multipart/form-data">                      
                     <div class="form-group">
                       <label class="form-control-label" for="title">Title</label>
                       <input id="title" type="text" name="title" placeholder="Name of book" class="form-control" value="<%= book.title %>" required="true">
