--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -18,7 +18,7 @@
                     </div>
                     
                     <div class="mt-3">
-                        <a href="/books/all/all/1" class="btn btn-block btn-info">Browse Books</a>
+                        <a href="/" class="btn btn-block btn-info">Back</a>
                     </div>
                 </div>
             </div>
