--- a/views/partials/adminNav.ejs
+++ b/views/partials/adminNav.ejs
@@ -8,23 +8,46 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           
-           <li class="nav-item px-2">
-            <a class="nav-link" href="/admin/bookInventory/all/all/1">Book Inventory</a>
-          </li>
-          
-           <li class="nav-item px-2">
+          <li class="nav-item px-2">
             <a class="nav-link" href="/admin/users/1">Users</a>
           </li>
-          
-           <li class="nav-item px-2">
-            <a class="nav-link" href="/admin/books/add">Add Books</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link" href="/admin/authors/add">Add Authors</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link" href="/admin/genres/add">Add Genres</a>
-          </li>
+
+   
+            <li class="nav-item dropdown mr-3">
+              <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">
+                <i class=""></i> Inventory
+              </a>
+              <div class="dropdown-menu">
+                <a href="/admin/bookInventory/all/all/1" class="dropdown-item">
+                  <i class=""></i> Book Inventory
+                </a>
+    
+                <a href="/admin/authorInventory/all/all/1" class="dropdown-item">
+                  <i class=""></i> Author Inventory
+                </a>
+                <a href="/admin/genreInventory/all/all/1" class="dropdown-item">
+                  <i class=""></i> Genre Inventory
+                </a>
+              </div>
+            </li>
+    
+            <li class="nav-item dropdown mr-3">
+              <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">
+                <i class=""></i> Adds
+              </a>
+              <div class="dropdown-menu">
+                <a href="/admin/books/add" class="dropdown-item">
+                  <i class=""></i> Add Books
+                </a>
+    
+                <a href="/admin/authors/add" class="dropdown-item">
+                  <i class=""></i> Add Authors
+                </a>
+                <a href="/admin/genres/add" class="dropdown-item">
+                  <i class=""></i> Add Genres
+                </a>
+              </div>
+            </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="/books/all/all/1"> Books</a>
           </li>
@@ -52,12 +75,9 @@
                 </a>
               </div>
             </li>
-            <!-- <li class="nav-item">
-              <a href="/admin/notifications" class="nav-link">
-                  <i class="fa fa-bell"></i><span class="badge badge-danger badge-pill">2</span>
-              </a>
-            </li> -->
           </ul>
+
+
       </div>
     </div>
 </nav>
