--- a/public/stylesheet/app.css
+++ b/public/stylesheet/app.css
@@ -30,6 +30,8 @@ footer {
   height: 280px;
 }
 .img-item1 {
+  display: block;
   width: 300px;
   height: 350px;
+  margin-left: auto; margin-right: auto;
 }
