--- a/views/user/bookDetails.ejs
+++ b/views/user/bookDetails.ejs
@@ -20,11 +20,11 @@
                     <h4 class="text-center"> <%= book.title %> </h4>
                 </div>
                 <p class="text-muted">
-                    <img  src="<%=book.ImageUrl%>" class="img-item1">
+                    <img  src="<%=book.ImageUrl%>" class="img-item1" style="text-align: center;">
                   </p>
-                  <a href="/authors/details/<%=book.author._id%>" class="btn btn-xs btn-primary" style="width: 300px;"> Author : <%= book.author.name%></a>
+                  <a href="/authors/details/<%=book.author._id%>" class="" style="width: 300px; margin-left: auto; margin-right: auto;color: black;">Được viết bởi : <%= book.author.name%></a>
                   <br>
-                  <a href="/genres/details/<%=book.genre[0]._id%>" class="btn btn-xs btn-primary"style="width: 300px;"> genre : <%=book.genre[0].name%></a>
+                  <a href="/genres/details/<%=book.genre[0]._id%>" class=""style="width: 300px;margin-left: auto; margin-right: auto;color: black;"> Thuộc thể loại : <%=book.genre[0].name%></a>
                 <div class="card-body">
                     <p class="card-text">
                         <%- book.summary %> 
