--- a/views/admin/author/author_update.ejs
+++ b/views/admin/author/author_update.ejs
@@ -12,7 +12,7 @@
       <div class="col-md-7">
           <div class="card">
             <div class="card-header text-center">
-              <h4>Add Author</h4>
+              <h4>Update Author</h4>
             </div>
               <div class="card-block">
                 <form class="p-3" action="/admin/author/update/<%=author._id%>" method="POST">                      
