--- a/views/admin/genre/genre_form.ejs
+++ b/views/admin/genre/genre_form.ejs
@@ -12,7 +12,7 @@
       <div class="col-md-7">
           <div class="card">
             <div class="card-header text-center">
-              <h4>Add Author</h4>
+              <h4>Add Genre</h4>
             </div>
               <div class="card-block">
                 <form class="p-3" action="/admin/genres/add" method="POST">                      
