--- a/views/user/activities.ejs
+++ b/views/user/activities.ejs
@@ -1,4 +1,4 @@
-<<%- include('../partials/header') %> 
+<%- include('../partials/header') %> 
 <!--NAVIGATION BAR FOR USER-->
 
 <%- include('../partials/userNav') %> 
