--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -64,8 +64,8 @@
             </li>
           </ul>
           <% } else { %>
-            <a href="/login" class="btn btn-primary btn-sm ml-auto">Login</a>
-            <a href="/auth/user-signup" class="btn btn-primary btn-sm ml-auto">Sign up</a>
+            <a href="/login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+            <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
           <% } %>
       </div>
   </div>
