--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,8 +27,8 @@
 
 
       <div class="col-md-4">
-        <a href="/authors/all/all/1" class="btn btn-primary btn-block">
-          <i class="fa fa-plus"></i> All Authors
+        <a href="/books/favorite" class="btn btn-primary btn-block">
+          <i class="fa fa-plus"></i> Favorite
         </a>
       </div>
       
