--- a/views/books.ejs
+++ b/views/books.ejs
@@ -63,14 +63,15 @@
             </li>
           </ul>
           <% } else { %>
-            <a href="/login" class="btn btn-primary btn-sm ml-auto">Login</a>
-            <a href="/auth/user-signup" class="btn btn-primary btn-sm ml-auto">Sign up</a>
+            <a href="/login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+            <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
           <% } %>
       </div>
   </div>
 </nav>
 
 <!--SEARCH BAR-->
+
 <section id="search_bar" class="my-3 py-4 bg-light">
   <div class="container">
    <form action="/books/all/all/1" method="POST">
@@ -78,16 +79,14 @@
         <div class="col-md-5 p-1">
           <select name="filter" class="form-control">
             <option selected disabled>Select Filter...</option>
-            <option  name="title">Title</option>
+            <option  name="Title">Title</option>
             <option  name="author">Author</option>
             <option  name="genre">genre</option>
           </select>
         </div>
-        
          <div class="col-md-5 p-1">
           <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
         </div>
-        
          <div class="col-md-2 p-1">
           <input type="submit" class="btn btn-outline-primary btn-block" value="Search">
         </div>
@@ -95,6 +94,7 @@
     </form>
   </div>
 </section>
+
 
 
 <%- include('./partials/alerts') %> 
@@ -121,6 +121,22 @@
             <p class="text-muted">
               <img  src="<%=book.ImageUrl%>" class="img-item">
             </p>
+            
+            <% if(currentUser) { var match = false%>
+              <% user.bookLikeInfo.forEach(book_info => { %>
+                  <% if(book_info._id.equals(book._id)) { %> 
+                     <form action="/books/<%=book.id%>/dislike" method="POST" class="d-inline">
+                      <input class="btn btn-xs btn-info" type="submit" value="Dislike">
+                     </form>
+                  <% match = true; } %>
+           <% }) %>
+           
+           <% if(!match) {%>
+          <form action="/books/<%=book._id%>/like/<%=currentUser._id%>" method="POST" class="d-inline">
+             <input class="btn btn-xs btn-success" type="submit" value="Like">
+          </form>
+          <% } %>
+          <% } %>
           </div>
         </div>
     <% } %>
