--- a/views/admin/authorInventory.ejs
+++ b/views/admin/authorInventory.ejs
@@ -22,10 +22,8 @@
         <div class="col-md-5 p-1">
           <select name="filter" class="form-control">
             <option selected disabled>Select Option...</option>
-            <option  name="title">Title</option>
-            <option  name="author">Author</option>
-            <option  name="category">Category</option>
-            <!-- <option  name="ISBN">By ISBN</option> -->
+            <option  name="first_name">first_name</option>
+            <option  name="last_name">last_name</option>
           </select>
         </div>
         
