--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -7,7 +7,7 @@
 <div class="container mt-5 pt-2">
     <div class="row">
         <div class="col-md-3">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwbGozsS9QP10p16rZiCrQD0koXVkI4c7LwUHab9dkmFRcN0VqCkB37f2y0EnySItwykg&usqp=CAU" class="card-img-top">
+          <img src="<%=user.image%>" class="card-img-top">
         </div>
         <div class="col-md-6">
             <h4 class="text-center card-header pb-3">Personal Informations</h4>
