--- a/views/admin/author/author_form.ejs
+++ b/views/admin/author/author_form.ejs
@@ -15,7 +15,7 @@
               <h4>Add Author</h4>
             </div>
               <div class="card-block">
-                <form class="p-3" action="/admin/authors/add" method="POST">                      
+                <form class="p-3" action="/admin/authors/add" method="POST" enctype="multipart/form-data">                      
 
                     <div class="form-group">
                       <label class="form-control-label" for="first_name">First Name:</label>
@@ -36,6 +36,14 @@
                       <label class="form-control-label" for="date_of_death">date_of_death:</label>
                       <input class="form-control" type="date" id="date_of_death" name="date_of_death" required="true">
                   </div>
+                  <div class="form-group">
+                    <label class="form-control-label" for="coverImg">Image Cover</label>
+                    <input type="file" name="image" class="form-control p-0 h-30" required="true">
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label" for="describe">Author describe</label>
+                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe">
+                  </div>  
 
                   <button type="submit" class="btn btn-primary btn-block">Add Author</button>
                 </form>
