--- a/views/admin/book/book_form.ejs
+++ b/views/admin/book/book_form.ejs
@@ -43,6 +43,10 @@
                               </div>
                           <% } %>
                         </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="form-control-label" for="describe">Book describe</label>
+                      <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe">
                     </div>      
                     <div class="form-group">
                       <label class="form-control-label" for="summary">Book Summary</label>
