--- a/views/admin/book/book_update.ejs
+++ b/views/admin/book/book_update.ejs
@@ -49,6 +49,10 @@
                         <% } %>
                     </div>         
                   </div>
+                  <div class="form-group">
+                    <label class="form-control-label" for="describe">Book describe</label>
+                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe" value="<%= book.describe %>">
+                  </div>
                     <div class="form-group">
                       <label class="form-control-label" for="summary">Book Summary</label>
                       <input type="textarea" id="summary" class="form-control" placeholder="summary" required="true" name="summary" value="<%= book.summary %>">
