--- a/views/user/bookDetails.ejs
+++ b/views/user/bookDetails.ejs
@@ -12,8 +12,16 @@
 
 <div class="container mt-3">
     <div class="row justify-content-center">
-
-        <div class="col-md-10">
+        <div class="col-md-2">
+            <h4 class="text-center pb-3">Terms & Conditions</h4>
+            <ul>
+                <li>Rule x should be abided by everyone</li>
+                <li>Rule x should be abided by everyone</li>
+                <li>Rule x should be abided by everyone</li>
+                <li>Rule x should be abided by everyone</li>
+            </ul>
+        </div>
+        <div class="col-md-8">
             
             <div class="card">
                 <div class="card-header">
@@ -25,6 +33,11 @@
                   <a href="/authors/details/<%=book.author._id%>" class="" style="width: 300px; margin-left: auto; margin-right: auto;color: black;">Được viết bởi : <%= book.author.name%></a>
                   <br>
                   <a href="/genres/details/<%=book.genre[0]._id%>" class=""style="width: 300px;margin-left: auto; margin-right: auto;color: black;"> Thuộc thể loại : <%=book.genre[0].name%></a>
+                <div class="card-body">
+                    <p class="card-text">
+                        <%- book.describe %> 
+                    </p>
+                </div>
                 <div class="card-body">
                     <p class="card-text">
                         <%- book.summary %> 
@@ -86,18 +99,20 @@
                 </li>
             <% }); %>
             </ul>
+            
             </div>
+        </div>
+        <div class="col-md-2">
+            <h4 class="text-center pb-3">Terms & Conditions</h4>
+            <ul>
+                <li>Rule x should be abided by everyone</li>
+                <li>Rule x should be abided by everyone</li>
+                <li>Rule x should be abided by everyone</li>
+                <li>Rule x should be abided by everyone</li>
+            </ul>
         </div>
     </div>
 </div> 
-
-
-
-
-            
-
-
- 
   
 <%- include('../partials/alerts') %> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -107,5 +122,7 @@
       $(this).next().next().toggleClass('d-none');
     });
 </script>
+
+
 
 <%- include('../partials/footer') %> 
