--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,13 +1,67 @@
-    
-    
+ 
     <!-- Footer -->
-<div class="wrapper mt-5">
-     <footer>
-        <div class="py-3">
-           Developed By:  <a href="" target="_blank"> Duong Duc Son</a>
-         </div>
-    </footer>
-</div>
+    <div class="wrapper mt-5">
+        <footer class="footer-distributed">
+    
+            <div class="footer-left">
+      
+              <h3>book reviews<span>for us</span></h3>
+      
+              <p class="footer-links">
+                <a href="#" class="link-1">Home</a>
+                
+                <a href="#">Blog</a>
+    
+                <a href="#">About</a>
+    
+                <a href="#">Contact</a>
+              </p>
+      
+              <p class="footer-company-name">© 2021</p>
+            </div>
+      
+            <div class="footer-center">
+      
+              <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>số 8, Tôn Thất Thuyết</span> Hà Nội, Việt Nam</p>
+              </div>
+      
+              <div>
+                <i class="fa fa-phone"></i>
+                <p>0652143658</p>
+              </div>
+      
+              <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="sonddgch18524@fpt.edu.vn">sonddgch18524@fpt.edu.vn</a></p>
+              </div>
+      
+            </div>
+      
+            <div class="footer-right">
+      
+              <p class="footer-company-about">
+                <span>About the WebSite</span>
+                Nơi trao đổi kiến thức về sách
+              </p>
+      
+              <div class="footer-icons">
+      
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+      
+              </div>
+      
+            </div>
+      
+          </footer>
+    </div>
+       
+    <link rel="stylesheet" href="/stylesheet/footer.css">
+  
+
    
     
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
@@ -18,6 +72,5 @@
     
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
     <script src="/assets/js/bootstrap.min.js"></script>
-    
-    </body>
+</body>
 </html>
