--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="/stylesheet/app.css"> 
         <script src="/assets/js/jquery.min.js"></script>
         
-        <title>Library Manangement System</title>
+        <title>Book Review</title>
         
     </head>
     
