--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -33,8 +33,8 @@
       </div>
       
       <div class="col-md-4">
-        <a href="/authors/all/all/1" class="btn btn-primary btn-block">
-          <i class="fa fa-plus"></i> All Genre
+        <a href="/users/friend/1" class="btn btn-primary btn-block">
+          <i class="fa fa-plus"></i> Friend
         </a>
       </div>
     </div>
