--- a/public/stylesheet/app.css
+++ b/public/stylesheet/app.css
@@ -31,7 +31,14 @@ footer {
 }
 .img-item1 {
   display: block;
-  width: 300px;
+  width: 450px;
   height: 450px;
   margin-left: auto; margin-right: auto;
 }
+.img-item2 {
+  display: block;
+  width: 300px;
+  height: 250px;
+  margin-left: auto; margin-right: auto;
+}
+
