--- a/views/user/bookDetails.ejs
+++ b/views/user/bookDetails.ejs
@@ -7,9 +7,6 @@
     
     <%- include('../partials/userNav') %> 
 <% }%>
-
-    
-
 <div class="container mt-3">
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -94,8 +91,15 @@
             </div>
         </div>
         <div class="col-md-3">
-            <h4 class="text-center pb-3">Những cuốn sách có liên quan</h4>
-            
+            <h4 class="text-center pb-3">Có thể bạn muốn đọc</h4>
+            <p class="text-muted">
+                
+                <a href="http://localhost:3000/books/details/616ef78ba635da3144bcef7f" ><img  src="https://cdn.chanhtuoi.com/uploads/2018/05/w400/nhung-cuon-sach-hay-6.jpg.webp" class="img-item2" ></a>
+                <img  src="https://isachhay.net/wp-content/uploads/2017/08/sach-hay-moi-lan-vap-nga-la-mot-lan-truong-thanh.jpg" class="img-item2" >
+                <img  src="https://i.doanhnhansaigon.vn/2018/08/25/Mot-lit-nuoc-mat-2277-1535167004.jpg" class="img-item2" >
+                <img  src="https://sachhay24h.com/uploads/images/2020/T5/477/top-10-cuon-sach-hay-nhat-thoi-dai-5.PNG" class="img-item2" >
+              </p>
+
         </div>
     </div>
 </div> 
