--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,7 +4,7 @@
 <%- include('../partials/userNav') %> 
 
 <!--DASHBOARD SECTION-->
-<header id="main-header" class="py-2 bg-primary text-white">
+<header id="main-header" class="py-2 bg-info text-white">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -19,22 +19,22 @@
 <section id="actions" class="py-4 mb-4 bg-light">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
-        <a href="/books/all/all/1" class="btn btn-primary btn-block">
-          <i class="fa fa-plus"></i> All Books
+      <div class="col-md-5">
+        <a href="/books/all/all/1" class="btn btn-dark">
+          <i class="fa fa-book"></i> All Books
         </a>
       </div>
 
 
-      <div class="col-md-4">
-        <a href="/books/favorite" class="btn btn-primary btn-block">
-          <i class="fa fa-plus"></i> Favorite
+      <div class="col-md-6">
+        <a href="/books/favorite" class="btn btn-dark">
+          <i class="fa fa-thumbs-up"></i> Favorite
         </a>
       </div>
       
-      <div class="col-md-4">
-        <a href="/users/friend/1" class="btn btn-primary btn-block">
-          <i class="fa fa-plus"></i> Friend
+      <div class="col-md-1">
+        <a href="/users/friend/1" class="btn btn-dark">
+          <i class="fa fa-users"></i> Friend
         </a>
       </div>
     </div>
