--- a/views/user/users.ejs
+++ b/views/user/users.ejs
@@ -2,7 +2,7 @@
 <!--NAVIGATION BAR FOR USER-->
 
 <%- include('../partials/userNav') %> 
-<header id="main-header" class="py-2 bg-primary text-white">
+<header id="main-header" class="py-2 bg-info text-white">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
