--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,7 +4,7 @@
 <!--NAVIGATION BAR FOR ADMIN-->
 <%- include('../partials/adminNav') %> 
 <!--DASHBOARD SECTION-->
-<header id="main-header" class="py-2 bg-primary text-white">
+<header id="main-header" class="py-2 bg-info text-white">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
