--- a/views/user/activities.ejs
+++ b/views/user/activities.ejs
@@ -5,7 +5,7 @@
 <!--BOOK DETAILS-->
 
 
-<header id="main-header" class="py-2 bg-primary text-white">
+<header id="main-header" class="py-2 bg-info text-white">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
