--- a/views/admin/author/author_update.ejs
+++ b/views/admin/author/author_update.ejs
@@ -42,7 +42,7 @@
                   </div>
                   <div class="form-group">
                     <label class="form-control-label" for="describe">Author describe</label>
-                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe" value="<%= book.describe %>">
+                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe" value="<%= author.describe %>">
                   </div>
                   <button type="submit" class="btn btn-primary btn-block">Update Author</button>
                 </form>
