--- a/views/admin/genre/genre_form.ejs
+++ b/views/admin/genre/genre_form.ejs
@@ -21,6 +21,10 @@
                       <label class="form-control-label" for="name">Thể loại:</label>
                       <input type="text" class="form-control" id="name" name="name" placeholder="Fantasy, Poetry etc."  required="true">
                     </div>
+                    <div class="form-group">
+                      <label class="form-control-label" for="describe">Author describe</label>
+                      <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe">
+                    </div>  
 
                   <button type="submit" class="btn btn-primary btn-block">Add Genre</button>
                 </form>
