--- a/views/user/authorDetails.ejs
+++ b/views/user/authorDetails.ejs
@@ -10,19 +10,28 @@
 <!--Author DETAILS-->
 
 
-  
-
-<h4 class="text-center"> Tác giả: <%= author.name%> 
-    <p>(<%= author.author_DOB_formatted%>)- (<%= author.author_DOD_formatted%>)  </p></h4>
-<div style="margin-left:20px;margin-top:20px"></div>
-<p class="text-muted">
-  <img  src="<%=author.ImageUrl%>" class="img-item1" style="text-align: center;">
-</p>
-<div class="card-body" style="text-align: center;">
-  <p class="card-text" style="text-align: center;">
-      <%- author.describe %> 
-  </p>
+<div class="container mt-3">
+  <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-header">
+              <h4 class="text-center"> Tác giả: <%= author.name%>
+                <p>(<%= author.author_DOB_formatted%>)- (<%= author.author_DOD_formatted%>)  </p>  </h4>
+                <div style="margin-left:20px;margin-top:20px"></div>
+          </div>
+          <p class="text-muted">
+            <img  src="<%=author.ImageUrl%>" class="img-item2" style="text-align: center;">
+          </p>
+          <div class="card-body">
+              <p class="card-text">
+                  Sơ lược qua: <%- author.describe %> 
+              </p>
+          </div>
+        </div>
+    </div>
+  </div>
 </div>
+
 <h4 style="margin-left:570px;margin-top:20px">Những Cuốn sách thuộc tác giả này</h4>
 <div class="row">
     <% for (let book of author_books) { %>
@@ -31,21 +40,21 @@
         <div class="card-body">
             
           <h5 class="card-title"> <%=book.title%> </h5>
+          <a href="/books/details/<%=book._id%>">
           <p class="text-muted">
             <img  src="<%=book.ImageUrl%>" class="img-item">
           </p>
-          <a href="/books/details/<%=book._id%>" class="btn btn-xs btn-primary">Details</a>
+        </a>
         </div>
       </div>
   <% } %>
   </div>
-
   <% if(user.isAdmin) { %>
   <a href="/admin/author/delete/<%=author._id%>" class="btn btn-sm btn-danger">Delete</a>
   <% } %>
   <% if (pages > 0) { %>
     <nav class="ml-3 mb-2">
-      <ul class="pagination offset-md-3">
+      <ul class="pagination offset-md-5">
         
         <% if (current == 1) { %>
           <li class="page-item disabled"><a class="page-link">First</a></li>
@@ -75,7 +84,5 @@
       </ul>
     </nav>
  <% } %>
-
-
 
 <%- include('../partials/footer') %> 
