--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -78,7 +78,7 @@
       
           <div class="card-body">
             <p class="text-muted">
-              <a href="/genres/details/<%=genre._id%>" ><%=genre.name%></a>
+              <a href="/genres/details/<%=genre._id%>" style="color: black; font-size: 20px;"><%=genre.name%></a>
             </p>
           </div>
         </div>
