--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -101,7 +101,7 @@
       
           <div class="card-body">
             <p class="text-muted">
-              <a href="/authors/details/<%=author._id%>"> Author : <%= author.name%></a>
+              <a href="/authors/details/<%=author._id%>" style="color: black; font-size: 20px;"> Author : <%= author.name%></a>
             </p>
             <p>
                 (<%= author.author_DOB_formatted%> - <%=author.author_DOD_formatted%>)
