--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -72,13 +72,16 @@
             </div>
             
             <div class="col-md-3">
-                <h4 class="text-center pb-3">Terms & Conditions</h4>
-                <ul>
-                    <li>Rule x should be abided by everyone</li>
-                    <li>Rule x should be abided by everyone</li>
-                    <li>Rule x should be abided by everyone</li>
-                    <li>Rule x should be abided by everyone</li>
-                </ul>
+              <div class="">
+                <a href="/books/favorite" class="btn btn-dark">
+                  <i class="fa fa-thumbs-up"></i> Favorite
+                </a>
+              </div><br>
+              <div class="">
+              <a href="/users/friend/1" class="btn btn-dark">
+                <i class="fa fa-users"></i> Friend
+              </a>
+            </div>
             </div>
         </div>
     </div>
