--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,6 +36,21 @@
       </div> 
   </div>
 </nav>
-<img src="https://images.gr-assets.com/misc/1619034579-1619034579_goodreads_misc.png" style="  width: 100%;height: 100%;">
+<img src="https://www.lifewithemilyblog.com/wp-content/uploads/2020/01/favorite-books-2019-life-with-emily-1.jpg" style="  width: 100%;height: 500px;">
+<section class="mt-4">
+<div class="container">
+  <div class="row">
+<div class="col-md-5">
+Quyết định đọc gì tiếp theo?
+Bạn đang ở đúng nơi. Hãy cho chúng tôi biết những tựa phim hoặc thể loại mà bạn yêu thích trong quá khứ và chúng 
+tôi sẽ cung cấp cho bạn những đề xuất sâu sắc đáng ngạc nhiên.
+<div>
+Bạn bè của bạn đang đọc gì?
+Rất có thể bạn bè của bạn đang thảo luận về những cuốn sách yêu thích của họ trên đây
+</div>
+</div>
+</div>
+</div>
+</section>
        
 <%- include('./partials/footer') %> 
