--- a/views/admin/genreInventory.ejs
+++ b/views/admin/genreInventory.ejs
@@ -78,7 +78,7 @@
             <% if (current == 1) { %>
                 <li class="page-item disabled"><a class="page-link">First</a></li>
             <% } else { %>
-                <li class="page-item"><a href="/admin/authorInventory/<%=filter%>/<%=value%>/1" class="page-link">First</a></li>
+                <li class="page-item"><a href="/admin/genreInventory/<%=filter%>/<%=value%>/1" class="page-link">First</a></li>
             <% } %>
             
             <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
@@ -89,7 +89,7 @@
                     <% if (i == current) { %>
                       <li class="page-item active"><a class="page-link"><%= i %></a></li>
                     <% } else { %>
-                      <li class="page-item"><a class="page-link" href="/admin/authorInventory/<%=filter%>/<%=value%>/<%=i%>"> <%=i%></a> </li>
+                      <li class="page-item"><a class="page-link" href="/admin/genreInventory/<%=filter%>/<%=value%>/<%=i%>"> <%=i%></a> </li>
                     <% } %>
                     <% if (i == Number(current) + 4 && i < pages) { %>
                           <li class="page-item disabled"><a class="page-link">...</a></li>
@@ -98,7 +98,7 @@
                     <% if (current == pages) { %>
                         <li class="page-item disabled"><a class="page-link">Last</a></li>
                     <% } else { %>
-                        <li class="page-item"><a href="/admin/authorInventory/<%=filter%>/<%=value%>/<%=pages%>" class="page-link">Last</a></li>
+                        <li class="page-item"><a href="/admin/genreInventory/<%=filter%>/<%=value%>/<%=pages%>" class="page-link">Last</a></li>
                 <% } %>
             </ul>
           </nav>
