--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %> 
 
         <div class="container">
-             <h1 class="text-center">Welcome To Library Management System</h1>
+             <h1 class="text-center">Đăng nhập</h1>
              <%- include('./partials/alerts') %> 
             <div class="row mt-3">
                 <div class="col-md-5 mx-auto text-center p-4">
