--- a/views/admin/genre/genre_form.ejs
+++ b/views/admin/genre/genre_form.ejs
@@ -22,10 +22,9 @@
                       <input type="text" class="form-control" id="name" name="name" placeholder="Fantasy, Poetry etc."  required="true">
                     </div>
                     <div class="form-group">
-                      <label class="form-control-label" for="describe">Author describe</label>
-                      <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe">
-                    </div>  
-
+                      <label class="form-control-label">Genre describe</label>
+                      <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"></textarea>
+                    </div>
                   <button type="submit" class="btn btn-primary btn-block">Add Genre</button>
                 </form>
               </div>
@@ -35,6 +34,9 @@
 </div>
 
 <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
+<script>
+  CKEDITOR.replace( 'describe' );
+</script>
 
 
 
