--- a/views/user/bookDetails.ejs
+++ b/views/user/bookDetails.ejs
@@ -94,7 +94,7 @@
             
             <p class="text-muted">
                 
-                <a href="http://localhost:3000/books/details/616ef78ba635da3144bcef7f" ><img  src="https://cdn.chanhtuoi.com/uploads/2018/05/w400/nhung-cuon-sach-hay-6.jpg.webp" class="img-item2" ></a>
+                <a href="http://localhost:3000/books/details/6177d3231459523704204873" ><img  src="https://salt.tikicdn.com/cache/w300/media/catalog/product/i/m/img144_10.jpg" class="img-item2" ></a>
                 <img  src="https://isachhay.net/wp-content/uploads/2017/08/sach-hay-moi-lan-vap-nga-la-mot-lan-truong-thanh.jpg" class="img-item2" >
                 <img  src="https://i.doanhnhansaigon.vn/2018/08/25/Mot-lit-nuoc-mat-2277-1535167004.jpg" class="img-item2" >
                 <img  src="https://sachhay24h.com/uploads/images/2020/T5/477/top-10-cuon-sach-hay-nhat-thoi-dai-5.PNG" class="img-item2" >
