--- a/views/admin/author/author_form.ejs
+++ b/views/admin/author/author_form.ejs
@@ -41,9 +41,9 @@
                     <input type="file" name="image" class="form-control p-0 h-30" required="true">
                   </div>
                   <div class="form-group">
-                    <label class="form-control-label" for="describe">Author describe</label>
-                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe">
-                  </div>  
+                    <label class="form-control-label">Author describe</label>
+                    <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"></textarea>
+                  </div> 
 
                   <button type="submit" class="btn btn-primary btn-block">Add Author</button>
                 </form>
@@ -55,6 +55,9 @@
 
 <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
 
+<script>
+  CKEDITOR.replace( 'describe' );
+</script>
 
 
   
