--- a/views/admin/author/author_update.ejs
+++ b/views/admin/author/author_update.ejs
@@ -41,8 +41,8 @@
                     <input type="file" name="image" class="form-control p-0 h-30" required="true">
                   </div>
                   <div class="form-group">
-                    <label class="form-control-label" for="describe">Author describe</label>
-                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe" value="<%= author.describe %>">
+                    <label class="form-control-label">Author describe</label>
+                    <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"><%=author.describe%></textarea>
                   </div>
                   <button type="submit" class="btn btn-primary btn-block">Update Author</button>
                 </form>
@@ -53,7 +53,9 @@
 </div>
 
 <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
-
+<script>
+  CKEDITOR.replace( 'describe' );
+</script>
 
 
   
