--- a/views/admin/book/book_form.ejs
+++ b/views/admin/book/book_form.ejs
@@ -45,12 +45,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                      <label class="form-control-label" for="describe">Book describe</label>
-                      <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe">
-                    </div>      
+                      <label class="form-control-label">Book describe</label>
+                      <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"></textarea>
+                    </div>
                     <div class="form-group">
-                      <label class="form-control-label" for="summary">Book Summary</label>
-                      <input type="textarea" id="summary" class="form-control" placeholder="summary" required="true" name="summary">
+                      <label class="form-control-label">Book Summary</label>
+                      <textarea name="summary" cols="30" rows="10" class="form-control"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary ">Add Book</button>
                   </form>
@@ -62,6 +62,11 @@
   </div>
   
 
+  <script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+  <script>
+    CKEDITOR.replace( 'summary' );
+    CKEDITOR.replace( 'describe' );
+</script>
 
  
   
