--- a/views/admin/book/book_update.ejs
+++ b/views/admin/book/book_update.ejs
@@ -50,12 +50,12 @@
                     </div>         
                   </div>
                   <div class="form-group">
-                    <label class="form-control-label" for="describe">Book describe</label>
-                    <input type="textarea" id="describe" class="form-control" placeholder="describe" required="true" name="describe" value="<%= book.describe %>">
+                    <label class="form-control-label">Book describe</label>
+                    <textarea name="describe" cols="30" rows="10" class="form-control" id="describe"><%=book.describe%></textarea>
                   </div>
                     <div class="form-group">
-                      <label class="form-control-label" for="summary">Book Summary</label>
-                      <input type="textarea" id="summary" class="form-control" placeholder="summary" required="true" name="summary" value="<%= book.summary %>">
+                      <label class="form-control-label">Book Summary</label>
+                      <textarea name="summary" cols="30" rows="10" class="form-control" ><%=book.summary%></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary ">Update</button>
                   </form>
@@ -66,6 +66,11 @@
     </div>
   </div>
   
+<script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+<script>
+    CKEDITOR.replace( 'summary' );
+    CKEDITOR.replace( 'describe' );
+</script>
 
 
  
