--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1><i class="fa fa-gear"></i> Dashboard</h1>
+        <h1><i class="fa fa-gear"></i> Hoạt Động</h1>
       </div>
     </div>
   </div>
@@ -20,7 +20,7 @@
     <div class="row justify-content-end">
       <div class="col-md-6">
         
-        <form action="/admin" method="POST">
+        <form action="/admin/users/1" method="POST">
            <div class="input-group">
             <input name="searchUser" type="text" class="form-control" placeholder="Find activities by username, category">
             <span class="input-group-btn">
