--- a/views/books.ejs
+++ b/views/books.ejs
@@ -67,6 +67,7 @@
 
 <!--SEARCH BAR-->
 
+
 <section id="search_bar" class="my-3 py-4 bg-light">
   <div class="container">
    <form action="/books/all/all/1" method="POST">
@@ -90,8 +91,32 @@
   </div>
 </section>
 
-
-
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://www.kitcarsoncountycarousel.com/sites/default/files/book-spread_1.png" alt="First slide" style="  width: 100%;height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://cincinnatibookarts.org/wp-content/uploads/2020/01/Image1_cropped-1024x482.jpg" alt="Second slide" style="  width: 100%;height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://blogphotoshop.com/wp-content/uploads/2019/01/thiet-ke-bia-sach-dep.jpg" alt="Third slide" style="  width: 100%;height: 400px;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 <%- include('./partials/alerts') %> 
 <!--BOOKS-->
 <section id="browse_books" class="mt-5" >
@@ -175,7 +200,6 @@
    <% } %>
   </div>
 </section>
-
 
 
 <%- include('./partials/footer') %> 
