--- a/views/admin/authorInventory.ejs
+++ b/views/admin/authorInventory.ejs
@@ -56,6 +56,7 @@
                 <th>Name</th>
                 <th>DOB</th>
                 <th>DOD</th>
+                <th>date added</th>
                 
               </tr>
             </thead>
@@ -65,6 +66,7 @@
                 <td><%= author.name %> </td>
                 <td><%= author.author_DOB_formatted %> </td>
                 <td><%= author.author_DOD_formatted %> </td>
+                <td><%= author.Ngaykhoitao %></td>
                 <td>
                     <span>
                         <a href="/admin/author/update/<%=author._id%>" class="btn btn-info btn-sm">Update</a>
