--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -59,7 +59,7 @@
             </li>
           </ul>
           <% } else { %>
-            <a href="/login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+            <a href="/auth/user-login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
             <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
           <% } %>
       </div>
@@ -103,11 +103,13 @@
             <p class="text-muted">
               <a href="/authors/details/<%=author._id%>" style="color: black; font-size: 20px;"> Author : <%= author.name%></a>
             </p>
+           
             <p>
                 (<%= author.author_DOB_formatted%> - <%=author.author_DOD_formatted%>)
             </p>
             <p class="text-muted">
               <img  src="<%=author.ImageUrl%>" class="img-item">
+              
             </p>
             <p class="card-text">
               Sơ lược:  <%- author.describe %> 
