--- a/views/books.ejs
+++ b/views/books.ejs
@@ -58,7 +58,7 @@
             </li>
           </ul>
           <% } else { %>
-            <a href="/login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+            <a href="/auth/user-login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
             <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
           <% } %>
       </div>
@@ -133,6 +133,9 @@
             <a href="/books/details/<%=book._id%>">
             <img  src="<%=book.ImageUrl%>" class="img-item">
             </a>
+            <div style="margin-left:3cm;">
+            <%- book.Ngaykhoitao %> 
+          </div>
           </p>
 
             <p class="text-muted">
