--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -59,7 +59,7 @@
             </li>
           </ul>
           <% } else { %>
-            <a href="/login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+            <a href="/auth/user-login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
             <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
           <% } %>
       </div>
