--- a/views/user/users.ejs
+++ b/views/user/users.ejs
@@ -81,7 +81,7 @@
               <% if (current == 1) { %>
                   <li class="page-item disabled"><a class="page-link">First</a></li>
               <% } else { %>
-                  <li class="page-item"><a href="/admin/users/1" class="page-link">First</a></li>
+                  <li class="page-item"><a href="/users/friend/1" class="page-link">First</a></li>
               <% } %>
               <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
                   <% if (i !== 1) { %>
@@ -91,7 +91,7 @@
                       <% if (i == current) { %>
                         <li class="page-item active"><a class="page-link"><%= i %></a></li>
                       <% } else { %>
-                        <li class="page-item"><a class="page-link" href="/admin/users/<%= i %>"> <%= i %></a> </li>
+                        <li class="page-item"><a class="page-link" href="/users/friend/<%= i %>"> <%= i %></a> </li>
                       <% } %>
                       <% if (i == Number(current) + 4 && i < pages) { %>
                             <li class="page-item disabled"><a class="page-link">...</a></li>
@@ -100,7 +100,7 @@
                       <% if (current == pages) { %>
                           <li class="page-item disabled"><a class="page-link">Last</a></li>
                       <% } else { %>
-                          <li class="page-item"><a href="/admin/users/<%= pages %>" class="page-link">Last</a></li>
+                          <li class="page-item"><a href="/users/friend/<%= pages %>" class="page-link">Last</a></li>
                   <% } %>
               </ul>
             </nav>
