--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -71,21 +71,23 @@
   <div class="container">
    <form action="/authors/all/all/1" method="POST">
     <div class="row">
-        <div class="col-md-5 p-1">
-          <select name="filter" class="form-control">
-            <option selected disabled>Select Filter...</option>
-            <option  name="first_name">first_name</option>
-            <option  name="author">Author</option>
-            <option  name="genre">genre</option>
-          </select>
-        </div>
-         <div class="col-md-5 p-1">
-          <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
-        </div>
-         <div class="col-md-2 p-1">
-          <input type="submit" class="btn btn-outline-primary btn-block" value="Search">
-        </div>
+      <div class="col-md-5 p-1">
+        <select name="filter" class="form-control">
+          <option selected disabled>Select Option...</option>
+          <option  name="first_name">first_name</option>
+          <option  name="last_name">last_name</option>
+          <option  name="name">name</option>
+        </select>
       </div>
+      
+       <div class="col-md-5 p-1">
+        <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
+      </div>
+      
+       <div class="col-md-2 p-1">
+        <input type="submit" class="btn btn-outline-primary btn-block" value="Search">
+      </div>
+    </div>
     </form>
   </div>
 </section>
