--- a/views/books.ejs
+++ b/views/books.ejs
@@ -74,15 +74,14 @@
     <div class="row">
         <div class="col-md-5 p-1">
           <select name="filter" class="form-control">
-            <option selected disabled>Select Filter...</option>
-            <option  name="Title">Title</option>
-            <option  name="author">Author</option>
-            <option  name="genre">genre</option>
+            <option  name="title">Title</option>
           </select>
         </div>
+        
          <div class="col-md-5 p-1">
           <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
         </div>
+        
          <div class="col-md-2 p-1">
           <input type="submit" class="btn btn-outline-primary btn-block" value="Search">
         </div>
