--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -65,7 +65,27 @@
       </div>
   </div>
 </nav>
-
+<section id="search_bar" class="my-3 py-4 bg-light">
+  <div class="container">
+   <form action="/genres/all/all/1" method="POST">
+    <div class="row">
+      <div class="col-md-5 p-1">
+        <select name="filter" class="form-control">
+          <option  name="name">Name</option>
+        </select>
+      </div>
+      
+       <div class="col-md-5 p-1">
+        <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
+      </div>
+      
+       <div class="col-md-2 p-1">
+        <input type="submit" class="btn btn-outline-primary btn-block" value="Search">
+      </div>
+    </div>
+    </form>
+  </div>
+</section>
 
 <%- include('./partials/alerts') %> 
 <!--BOOKS-->
