--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
           </li>
         </ul>
           </ul>
-            <a href="/auth/user-login/auth/user-login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
+            <a href="/auth/user-login" class="btn btn-primary" style="margin-left: 20cm;">Login</a>
             <a href="/auth/user-signup" class="btn btn-primary">Sign up</a>
       </div> 
   </div>
