--- a/views/admin/authorInventory.ejs
+++ b/views/admin/authorInventory.ejs
@@ -28,7 +28,7 @@
         </div>
         
          <div class="col-md-5 p-1">
-          <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
+          <input name="searchName"  type="text" class="form-control" placeholder="Search Authors">
         </div>
         
          <div class="col-md-2 p-1">
