--- a/views/admin/genreInventory.ejs
+++ b/views/admin/genreInventory.ejs
@@ -26,7 +26,7 @@
         </div>
         
          <div class="col-md-5 p-1">
-          <input name="searchName"  type="text" class="form-control" placeholder="Search Books">
+          <input name="searchName"  type="text" class="form-control" placeholder="Search Genres">
         </div>
         
          <div class="col-md-2 p-1">
