--- a/views/user/userSignup.ejs
+++ b/views/user/userSignup.ejs
@@ -1,4 +1,7 @@
 <%- include('../partials/header') %> 
+<!--NAVIGATION BAR FOR USER-->
+
+<%- include('../partials/userNav') %> 
 
 <section id="usersignUpForm">
   <div class="container mt-5">
