--- a/views/admin/author/author_form.ejs
+++ b/views/admin/author/author_form.ejs
@@ -34,7 +34,7 @@
                   
                   <div class="form-group">
                       <label class="form-control-label" for="date_of_death">date_of_death:</label>
-                      <input class="form-control" type="date" id="date_of_death" name="date_of_death" required="true">
+                      <input class="form-control" type="date" id="date_of_death" name="date_of_death" >
                   </div>
                   <div class="form-group">
                     <label class="form-control-label" for="coverImg">Image Cover</label>
