--- a/views/user/userLogin.ejs
+++ b/views/user/userLogin.ejs
@@ -21,6 +21,8 @@
                   <input type="password" name="password" placeholder="Password" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Login!</button>
+                <br>
+                <a href="/auth/user-signup" class="btn btn-primary" style="margin-left: 11cm;">Sign up</a>
               </form>
             </div>
         </div>
